--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="#" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Tic-tac-toe</title>
   </head>
-  <body></body>
+  <body>
+    <div id="gameEnd">
+      <p class="white" id="endGameStatus">...</p>
+      <input
+        type="submit"
+        value="Recommencer"
+        id="relaodGame"
+        onclick="reloadGame()"
+      />
+
+      <div class="board">
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+        <div class="cell" data-cell=""></div>
+      </div>
+    </div>
+
+    <h1 id="gameStatus">Le joueur1 commence!</h1>
+    <script src="./script.js"></script>
+  </body>
 </html>
