--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         id="relaodGame"
         onclick="reloadGame()"
       />
-
-      <div class="board">
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-        <div class="cell" data-cell=""></div>
-      </div>
     </div>
 
-    <h1 id="gameStatus">Le joueur1 commence!</h1>
+    <div class="board">
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+    </div>
+
+    <h1 id="gameStatus">Le joueur 1 commence!</h1>
     <script src="./script.js"></script>
   </body>
 </html>
